fix(components): revert back to scss files to fix broken styles

--- a/src/components/Touchable.module.scss
+++ b/src/components/Touchable.module.scss
@@ -4,6 +4,10 @@
 
 	transition: var(--duration-medium) var(--easing-quick);
 
+	& > * {
+		z-index: var(--layer-content);
+	}
+
 	&:active {
 		transform: scale(var(--interaction-click-scale));
 	}
